--- a/style.css
+++ b/style.css
@@ -89,6 +89,11 @@ body{
     text-align: center;
 }
 
+.disabled{
+    cursor: not-allowed;
+    opacity: .5;
+}
+
 .main_container_btn{
     width: 100%;
     font-family: var(--font-family);    
@@ -104,9 +109,10 @@ body{
 .main_container_btn:hover{
     background: var(--primary-color);
     color: var(--text-color);
-    cursor: pointer;
     transition: .3s;
 }
+
+
 
 /* Footer */
 .footer {
